# TEAMS2HA

./: .gitignore  AboutWindow.xaml  AboutWindow.xaml.cs  App.config  App.xaml  App.xaml.cs  CryptoHelper.cs  LoggingConfig.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  TEAMS2HA.csproj  TEAMS2HA.sln  breaking.md  todo and bugs.txt
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: checkmarx-one.yml  codeql.yml  release.yml  rust-audit.yml  stale.yml
API/: CameraMonitor.cs  Device.cs  Homeassistant.cs  MeetingState.cs  MicrophoneMonitor.cs  MqttClientWrapper.cs  MqttManager.cs  MqttService.cs  OnAirWarningLight.cs  ProcessWatcher.cs  State.cs  Teams.cs  TokenStorage.cs  WasapiMonitor.cs  WebSocketManager.cs
Properties/: Settings.Designer.cs  Settings.settings
Utils/: MeetingUpdateConverter.cs  ProcessWatcher.cs  TeamsLogWatcher.cs  TeamsUpdateEventArgs.cs  TokenUpdate.cs
tauri/: package-lock.json  package.json  vite.config.js
tauri/src/: App.css  App.jsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: app_state.rs  lib.rs  log_watcher.rs  migration.rs  mqtt_service.rs  process_watcher.rs  registry_monitor.rs  settings.rs  wasapi_monitor.rs
tauri/src/components/: Settings.jsx  StatusBar.jsx
